--- a/mysite02/src/main/webapp/WEB-INF/web.xml
+++ b/mysite02/src/main/webapp/WEB-INF/web.xml
@@ -1,17 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://JAVA.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
   <display-name>mysite02</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
+
+	<!--  Context Load Listener -->
+  <listener>
+    <listener-class>com.douzone.mysite.web.listener.ContextLoadListener</listener-class>
+  </listener>
+  
+  	<!--  encoding Filter -->
+    <filter>
+    <filter-name>EncodingFilter</filter-name>
+    <filter-class>com.douzone.mysite.web.filter.EncodingFilter
+		</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>EncodingFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  <!-- Servlet -->
   <servlet>
     <servlet-name>MainController</servlet-name>
     <servlet-class>com.douzone.mysite.controller.MainController</servlet-class>
+    <init-param>
+      <param-name>config</param-name>
+      <param-value>/WEB-INF/servlet-context.xml</param-value>
+    </init-param>
   </servlet>
   <servlet-mapping>
     <servlet-name>MainController</servlet-name>
@@ -19,7 +33,6 @@
   </servlet-mapping>
   <servlet>
     <description></description>
-    <display-name>UserController</display-name>
     <servlet-name>UserController</servlet-name>
     <servlet-class>com.douzone.mysite.controller.UserController</servlet-class>
   </servlet>
@@ -31,10 +44,32 @@
     <description></description>
     <display-name>GuestbookController</display-name>
     <servlet-name>GuestbookController</servlet-name>
-    <servlet-class>com.douzone.mysite.controller.GuestbookController</servlet-class>
+    <servlet-class>com.douzone.mysite.controller.GuestbookController
+		</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>GuestbookController</servlet-name>
     <url-pattern>/guestbook</url-pattern>
   </servlet-mapping>
+  
+  <!-- 공통 Error Page -->
+  <error-page>
+    <error-code>500</error-code>
+    <location>/WEB-INF/views/error/500.jsp</location>
+  </error-page>
+  <error-page>
+    <error-code>404</error-code>
+    <location>/WEB-INF/views/error/404.jsp</location>
+  </error-page>
+  
+  <!-- Welcome (Default)File -->
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.htm</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>default.html</welcome-file>
+    <welcome-file>default.htm</welcome-file>
+    <welcome-file>default.jsp</welcome-file>
+  </welcome-file-list>
+
 </web-app>
