--- a/mysite03/pom.xml
+++ b/mysite03/pom.xml
@@ -22,13 +22,33 @@
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-context</artifactId>
 		    <version>${org.springframework-version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+			</exclusions>		    
 		</dependency>
-		
-		<!-- Spring MVC --> 
+	
+		<!-- Spring Aspect -->
+		<dependency>
+	    	<groupId>org.springframework</groupId>
+	    	<artifactId>spring-aspects</artifactId>
+	    	<version>${org.springframework-version}</version>
+		</dependency>
+				
+		<!-- Spring MVC -->
 		<dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-webmvc</artifactId>
 		    <version>${org.springframework-version}</version>
+		</dependency>
+
+		<!-- Validation -->
+		<dependency>
+		   <groupId>org.hibernate.validator</groupId>
+		   <artifactId>hibernate-validator</artifactId>
+		   <version>6.2.3.Final</version>
 		</dependency>
 
 		<!-- Spring JDBC -->
@@ -38,20 +58,12 @@
 		    <version>${org.springframework-version}</version>
 		</dependency>
 
-		<!-- Common DBCP -->
-		<dependency>
-		    <groupId>commons-dbcp</groupId>
-		    <artifactId>commons-dbcp</artifactId>
-		    <version>1.4</version>
-		</dependency>
-		
 		<!-- MyBatis Core -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
 			<version>3.5.9</version>
 		</dependency>
-		
 		<!-- MyBatis Spring -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
@@ -59,6 +71,12 @@
 			<version>2.0.7</version>
 		</dependency>
 
+		<!-- Common DBCP -->
+		<dependency>
+		    <groupId>commons-dbcp</groupId>
+		    <artifactId>commons-dbcp</artifactId>
+		    <version>1.4</version>
+		</dependency>
 		
 		<!-- MariaDB JDBC Driver -->
 		<dependency>
@@ -73,7 +91,31 @@
 		    <artifactId>jstl</artifactId>
 		    <version>1.2</version>
 		</dependency>
-				
+		
+		<!-- Slf4j(Logback) -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>1.7.36</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.2.11</version>
+		</dependency>
+
+		<!-- Common Fileupload -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+								
 		<!-- Servlet -->
 		<dependency>
 		    <groupId>javax.servlet</groupId>
@@ -102,12 +144,12 @@
 			    <artifactId>tomcat-maven-plugin</artifactId>
 			    <version>1.1</version>
 			    <configuration>
-					<url>http://192.168.0.146:8080/manager/text</url>
-					<path>/mysite03</path>
-					<username>llyn99</username>
-					<password>llyn99</password>
-				</configuration>
-			</plugin>
+			    	<url>http://192.168.0.146:8080/manager/text</url>
+			    	<path>/mysite03</path>
+			    	<username>llyn99</username>
+			    	<password>llyn99</password>
+			    </configuration>
+			</plugin>			
 		</plugins>
-	</build>
+	</build>	
 </project>
