--- a/mysite03/pom.xml
+++ b/mysite03/pom.xml
@@ -48,6 +48,14 @@
 		   <version>6.2.3.Final</version>
 		</dependency>
 
+		<!-- jackson -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.13.2.2</version>
+		</dependency>
+
+
 		<!-- Spring JDBC -->
 		<dependency>
 		    <groupId>org.springframework</groupId>
@@ -141,10 +149,10 @@
 			    <artifactId>tomcat-maven-plugin</artifactId>
 			    <version>1.1</version>
 			    <configuration>
-			    	<url>http://192.168.0.125:8080/manager/text</url>
+			    	<url>http://192.168.10.50:80/manager/text</url>
 			    	<path>/mysite03</path>
 			    	<username>admin</username>
-			    	<password>manager</password>
+			    	<password>llyn99</password>
 			    </configuration>
 			</plugin>			
 		</plugins>
